[package]
name = "esp-gyro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "esp-gyro"
harness = false # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "=1.0.86"
embedded-hal = "=0.2.7"
esp-idf-svc  = "=0.49.0"
icm42670     = "=0.1.1"
lis3dh       = "=0.4.2"
shared-bus   = "=0.3.1"
shtcx        = "=0.11.0"
log          = "=0.4.22"
toml-cfg     = "=0.1.3"
rgb-led     = { path = "lib/rgb-led" }
wifi        = { path = "lib/wifi" }

[build-dependencies]
embuild = "=0.32.0"
toml-cfg = "=0.1.3"
